--- a/app/src/main/res/layout/fragment_developer.xml
+++ b/app/src/main/res/layout/fragment_developer.xml
@@ -78,7 +78,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:scrollbars="vertical" />
+                android:scrollbars="vertical"
+                android:textColor="?android:attr/textColorPrimaryInverse" />
 
         </ScrollView>
 
